# Deutscher-Brutto-Netto-Rechner

./: .gitignore  CMakeLists.txt  README.md  calculator.ipynb  calculator.py  constants.py  helper.py  income_tax_calculator.py  main.ipynb  main.py  payslip.md  social_contribution_calculator.py
docs/: cmake-build-guide.md
src/: annual_summary.cpp  annual_summary.hpp  lohnsteuer.cpp  lohnsteuer.hpp  main.cpp  payslip.cpp  payslip.hpp  sozialversicherung.cpp  sozialversicherung.hpp  tax.cpp  tax.hpp
template_input/2024/: config.yaml  constants.yaml
